--- a/package.json
+++ b/package.json
@@ -10,14 +10,23 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
-    "@react-navigation/native": "^6.1.6",
-    "@react-navigation/stack": "^6.3.16",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/stack": "^6.3.17",
     "expo": "~48.0.15",
+    "expo-camera": "~13.2.1",
+    "expo-image-picker": "~14.1.1",
+    "expo-media-library": "~15.2.3",
+    "expo-permissions": "~14.1.1",
+    "expo-sharing": "~11.2.2",
     "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-camera": "^4.2.1",
     "react-native-image": "^0.1.1",
+    "react-native-image-crop-picker": "^0.40.0",
+    "react-native-image-picker": "^5.6.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10"
   },
