--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
+    "@react-native-async-storage/async-storage": "^1.19.2",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
+    "@stripe/stripe-react-native": "0.23.3",
+    "axios": "^1.4.0",
     "expo": "~48.0.15",
+    "expo-app-auth": "^12.0.0",
     "expo-camera": "~13.2.1",
     "expo-image-picker": "~14.1.1",
     "expo-media-library": "~15.2.3",
@@ -23,12 +27,15 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-app-auth": "^6.4.3",
     "react-native-camera": "^4.2.1",
     "react-native-image": "^0.1.1",
     "react-native-image-crop-picker": "^0.40.0",
     "react-native-image-picker": "^5.6.0",
+    "react-native-track-player": "^3.2.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.10"
+    "react-native-web": "~0.18.10",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
