Working on the links to Spotify so that the songs will be played from within the application using API requests

--- a/app.json
+++ b/app.json
@@ -40,6 +40,7 @@
       "favicon": "./assets/favicon.png",
 
       "permissions": ["CAMERA"]
-    }
+    },
+    "scheme": "exp://10.100.102.42:19000"
   }
 }
