The musicStyle page I added a text box to search for a mood and each time only shows the songs of the input. A bit of design

--- a/app.json
+++ b/app.json
@@ -41,6 +41,6 @@
 
       "permissions": ["CAMERA"]
     },
-    "scheme": "exp://10.100.102.42:19000"
+    "scheme": "exp://10.100.102.42:19000",
   }
 }
