--- a/app.json
+++ b/app.json
@@ -1,14 +1,14 @@
 {
   "expo": {
-    "name": "appMusic",
+    "name": "MoodPlay",
     "slug": "appMusic",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/icon1.png",
     "permissions": ["CAMERA"],
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/splashScreen.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -41,6 +41,6 @@
 
       "permissions": ["CAMERA"]
     },
-    "scheme": "exp://10.100.102.42:19000"
+    "scheme": "exp://192.168.68.103:19000"
   }
 }
