--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-native-track-player": "^3.2.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "expo-splash-screen": "~0.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
