changing app name

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "appMusic",
+    "name": "Moodplay",
     "slug": "appMusic",
     "version": "1.0.0",
     "orientation": "portrait",
