After identifying the mood in the picture, you will immediately come to a page with songs according to the identified mood. In case the mood doesn't exist in our list, the next highest of what we have will be returned

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-media-library": "~15.2.3",
     "expo-permissions": "~14.1.1",
     "expo-sharing": "~11.2.2",
+    "expo-splash-screen": "^0.20.5",
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.16.4",
     "react": "18.2.0",
