--- a/package.json
+++ b/package.json
@@ -9,22 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^18.0.1",
+    "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^0.12.52",
     "@react-native-async-storage/async-storage": "^1.19.2",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "@stripe/stripe-react-native": "0.23.3",
     "axios": "^1.4.0",
-    "expo": "~48.0.15",
-    "expo-app-auth": "^12.0.0",
+    "expo": "^49.0.9",
+    "expo-app-auth": "^9.3.0",
+    "expo-av": "^13.4.1",
     "expo-camera": "~13.2.1",
+    "expo-font": "^11.4.0",
     "expo-image-picker": "~14.1.1",
     "expo-media-library": "~15.2.3",
     "expo-permissions": "~14.1.1",
     "expo-sharing": "~11.2.2",
-    "expo-splash-screen": "~0.18.2",
+    "expo-splash-screen": "^0.20.5",
     "expo-status-bar": "~1.4.4",
-    "expo-updates": "~0.16.4",
+    "expo-updates": "^0.18.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
