--- a/package.json
+++ b/package.json
@@ -10,27 +10,27 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@expo/webpack-config": "^0.12.52",
-    "@react-native-async-storage/async-storage": "^1.19.2",
+    "@expo/webpack-config": "^19.0.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
-    "@stripe/stripe-react-native": "0.23.3",
+    "@stripe/stripe-react-native": "0.28.0",
     "axios": "^1.4.0",
     "expo": "^49.0.9",
-    "expo-app-auth": "^9.3.0",
+    "expo-app-auth": "~11.1.0",
     "expo-av": "^13.4.1",
-    "expo-camera": "~13.2.1",
+    "expo-camera": "~13.4.4",
     "expo-font": "^11.4.0",
-    "expo-image-picker": "~14.1.1",
-    "expo-media-library": "~15.2.3",
-    "expo-permissions": "~14.1.1",
-    "expo-sharing": "~11.2.2",
+    "expo-image-picker": "~14.3.2",
+    "expo-media-library": "~15.4.1",
+    "expo-permissions": "~14.2.1",
+    "expo-sharing": "~11.5.0",
     "expo-splash-screen": "^0.20.5",
-    "expo-status-bar": "~1.4.4",
+    "expo-status-bar": "~1.6.0",
     "expo-updates": "^0.18.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "0.72.4",
     "react-native-app-auth": "^6.4.3",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-camera": "^4.2.1",
@@ -40,7 +40,7 @@
     "react-native-sound": "^0.11.2",
     "react-native-track-player": "^3.2.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.10",
+    "react-native-web": "~0.19.6",
     "request": "^2.88.2"
   },
   "devDependencies": {
