--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-splash-screen": "^0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-updates": "^0.18.12",
+    "galio-framework": "^0.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
