--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/indie-flower": "^0.2.3",
+    "@expo-google-fonts/kalam": "^0.2.3",
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^19.0.0",
     "@react-native-async-storage/async-storage": "1.18.2",
@@ -18,20 +20,21 @@
     "axios": "^1.4.0",
     "expo": "^49.0.9",
     "expo-app-auth": "~11.1.0",
-    "expo-av": "~13.4.1",
+    "expo-app-loading": "^2.1.1",
+    "expo-av": "^13.4.1",
     "expo-camera": "~13.4.4",
     "expo-font": "~11.4.0",
     "expo-image-picker": "~14.3.2",
     "expo-media-library": "~15.4.1",
     "expo-permissions": "~14.2.1",
     "expo-sharing": "~11.5.0",
-    "expo-splash-screen": "~0.20.5",
+    "expo-splash-screen": "^0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.13",
     "galio-framework": "^0.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.3",
+    "react-native": "0.72.4",
     "react-native-app-auth": "^6.4.3",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-camera": "^4.2.1",
