New font updated in some places. In the screens at the beginning and in the login/logout buttons it still does not work

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo": "^49.0.9",
     "expo-app-auth": "~11.1.0",
     "expo-app-loading": "^2.1.1",
+    "expo-asset": "^8.10.1",
     "expo-av": "^13.4.1",
     "expo-camera": "~13.4.4",
     "expo-font": "~11.4.0",
@@ -32,9 +33,9 @@
     "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.13",
     "galio-framework": "^0.8.0",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.4",
+    "react-native": "^0.72.4",
     "react-native-app-auth": "^6.4.3",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-camera": "^4.2.1",
