--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-image": "^0.1.1",
     "react-native-image-crop-picker": "^0.40.0",
     "react-native-image-picker": "^5.6.0",
+    "react-native-modal": "^13.0.1",
     "react-native-sound": "^0.11.2",
     "react-native-track-player": "^3.2.0",
     "react-native-vector-icons": "^9.2.0",
